tinyc/test/bad/null-redeclare-field.c
struct s
{
    int NULL;
};
int main()
{
    return 0;
}
